--- a/blogs/style/article-1/article-1.scss
+++ b/blogs/style/article-1/article-1.scss
@@ -17,7 +17,7 @@
 .inner {
   width: 50%;
 }
-.footer-inner{
+.footer-inner {
   width: 85vw;
 }
 .wrapper {
@@ -200,39 +200,50 @@ header {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     padding: 2rem 0;
-    
-    .footer-col-1{
+
+    .footer-col-1 {
       display: flex;
       flex-direction: column;
       // justify-content: center;
       align-items: flex-start;
     }
-    
-    .footer-col-2{
+
+    .footer-col-2 {
       display: flex;
       flex-direction: column;
       // justify-content: center;
       align-items: center;
+
+      .footer-col-2-p {
+        font-size: 0.8rem;
+      }
+
+      .footer-col-2-last-div {
+        display: flex;
+        .link-spacer {
+          margin: 0 0.5rem;
+        }
+      }
     }
   }
-  
-  .footer-link{
+
+  .footer-link {
     color: $fourth-color;
     text-decoration: none;
-    font-size: .9rem;
+    font-size: 0.9rem;
   }
-  .footer-ul{
+  .footer-ul {
     display: flex;
     flex-direction: column;
-    margin: .5rem 0;
-    
-    .footer-li{
+    margin: 0.5rem 0;
+
+    .footer-li {
       list-style-type: none;
       margin-top: 1rem;
     }
   }
-  
-  .footer-align-container{
+
+  .footer-align-container {
     width: 70%;
     margin: 1rem 0;
     .footer-h4 {
@@ -241,10 +252,10 @@ header {
       color: #cdced3;
     }
   }
-  .footer-h2{
+  .footer-h2 {
     font-size: 1rem;
   }
-  
+
   .link-h5 {
     text-decoration: none;
     color: $main-color;
@@ -265,28 +276,28 @@ header {
 }
 
 // COMMENTS STYLES ======================
-.comment-section{
+.comment-section {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 // FOR COMMENT SECTION LABEL (Makes it closer to actual comment section)
-.comment-section-h4{
+.comment-section-h4 {
   margin-bottom: -4rem;
 }
 
-.replied-to-name{
+.replied-to-name {
   color: $main-color;
 }
 
 //FOR THE REPLY INPUT FORM INDENT
-.replyInputContainer{
+.replyInputContainer {
   margin-left: 5rem;
   animation: 300ms opacityIn forwards linear;
 }
 
-.comment-section-inner{
+.comment-section-inner {
   // width: 100%;
   min-height: 20vh;
   position: relative;
@@ -305,12 +316,10 @@ header {
   }
 
   #comment-input-form,
-  #reply-input-comment{
+  #reply-input-comment {
     border: none;
     outline: none;
   }
-  
-  
 
   .comment-btn-container {
     width: 100%;
@@ -329,7 +338,7 @@ header {
 }
 
 .comment-container,
-.reply-container{
+.reply-container {
   width: 100%;
   min-height: 10rem;
   padding: 1rem;
@@ -355,7 +364,7 @@ header {
   }
 
   .comment-container-lower {
-    padding: 1rem 1rem 2rem  1rem;
+    padding: 1rem 1rem 2rem 1rem;
 
     .comment-reply-btn {
       position: absolute;
@@ -386,12 +395,12 @@ header {
   }
 }
 
-.comment-container{
+.comment-container {
   margin-top: 5rem;
 }
-.reply-container{
+.reply-container {
   margin-left: 5rem;
-  width: calc( 100% - 5rem)
+  width: calc(100% - 5rem);
 }
 
 .comment-replies-ul {
@@ -401,26 +410,52 @@ header {
   }
 }
 
-
-.comment-row{
+.comment-row {
   display: flex;
   margin-bottom: 1rem;
 }
 
-.comment-input-container{
+.comment-input-container {
   display: flex;
   flex-direction: column;
   flex: 1;
 }
 
-.comment-input{
+.comment-input {
   border: none;
 }
 
-.comment-input-name{
+.comment-input-name {
   margin-right: 2rem;
 }
 // END OF COMMENT STYLES ========================================
+
+@media only screen and (max-width: 1280px) {
+  //COMMON CLASSES ==================================================================================================================
+
+  .footer-inner {
+    width: 85vw;
+  }
+
+  .footer{
+    .link-h5{
+      font-size: .6rem;
+    }
+    .footer-link{
+      font-size: .8rem;
+    }
+  }
+
+  // column-containers - - - - - - - - - - - - - - - - - - - - - - -- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+  .col-2-right-widget {
+    display: grid;
+    grid-template-columns: 1fr 18rem;
+  }
+
+  // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+
+  //=================================================================================================================================
+}
 
 @media only screen and (max-width: 900px) {
   // COMMON CLASSES
@@ -517,7 +552,7 @@ header {
     .site-nav {
       display: none;
     }
-    
+
     .site-nav-solid {
       background: #000;
       animation: 1000ms opacityIn linear forwards;
@@ -561,7 +596,7 @@ header {
       text-shadow: 0px 0px 15px #000000;
     }
   }
-  
+
   .footer {
     background: #f1f2f8;
     height: auto;
@@ -570,8 +605,8 @@ header {
       grid-template-columns: (1fr);
       grid-auto-rows: auto;
       padding: 1rem 0;
-      
-      .footer-col-1{
+
+      .footer-col-1 {
         grid-row: 2/3;
         display: flex;
         flex-direction: column;
@@ -579,8 +614,8 @@ header {
         align-items: center;
         margin: 2rem 0;
       }
-      
-      .footer-col-2{
+
+      .footer-col-2 {
         display: flex;
         flex-direction: column;
         // justify-content: center;
@@ -588,7 +623,7 @@ header {
       }
     }
   }
-  
+
   .replyInputContainer {
     margin-left: 0;
   }
@@ -607,7 +642,7 @@ header {
   0% {
     opacity: 0;
   }
-  100%{
+  100% {
     opacity: 100%;
   }
 }
@@ -633,7 +668,6 @@ header {
   border: 6px solid rgb(8, 7, 37);
   border-color: rgb(8, 7, 37) transparent rgb(8, 7, 37) transparent;
   animation: lds-dual-ring 1.2s linear infinite;
-  
 }
 @keyframes lds-dual-ring {
   0% {
@@ -643,6 +677,5 @@ header {
     transform: rotate(360deg);
   }
 }
-
 
 // LOADING CSS
