--- a/blogs/style/sri-lanka/sri-lanka.css
+++ b/blogs/style/sri-lanka/sri-lanka.css
@@ -290,6 +290,20 @@ header .header-p {
           align-items: center;
 }
 
+.footer .footer-inner .footer-col-2 .footer-col-2-p {
+  font-size: 0.8rem;
+}
+
+.footer .footer-inner .footer-col-2 .footer-col-2-last-div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.footer .footer-inner .footer-col-2 .footer-col-2-last-div .link-spacer {
+  margin: 0 0.5rem;
+}
+
 .footer .footer-link {
   color: #02122C;
   text-decoration: none;
@@ -535,6 +549,24 @@ header .header-p {
   }
   .section-1 .section-1-img {
     height: 100%;
+  }
+}
+
+@media only screen and (max-width: 1280px) {
+  .footer-inner {
+    width: 85vw;
+  }
+  .footer .link-h5 {
+    font-size: .6rem;
+  }
+  .footer .footer-link {
+    font-size: .8rem;
+  }
+  .col-2-right-widget {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 18rem;
+        grid-template-columns: 1fr 18rem;
   }
 }
 
