--- a/styles/index.style.css
+++ b/styles/index.style.css
@@ -38,6 +38,56 @@
   margin-top: 8rem;
 }
 
+.search-ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 10rem;
+  margin-bottom: -8rem;
+  z-index: 10;
+}
+
+.search-ul .search-li {
+  margin-right: 1rem;
+  list-style: none;
+}
+
+.search-ul .search-li a {
+  text-decoration: none;
+}
+
+.search-ul .search-li .search-btn {
+  min-width: 10rem;
+  height: 1.8rem;
+  background: #feffff67;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  border: none;
+  color: white;
+  font-weight: 600;
+  text-decoration: none;
+  padding: 0 1rem;
+  border-radius: 1rem;
+  -webkit-transition: 300ms linear;
+  transition: 300ms linear;
+}
+
+.search-ul .search-li .search-btn .btnImg {
+  width: 1.5rem;
+}
+
+.search-ul .search-li .search-btn:hover {
+  background: #fff;
+  color: #385565;
+}
+
 .tourBtn {
   text-decoration: none;
   width: 11.8rem;
@@ -64,10 +114,6 @@
           justify-content: flex-start;
   z-index: 9;
   border-left: white 1px solid;
-}
-
-.btnImg {
-  width: 2rem;
 }
 
 .search-form-submit button {
@@ -1033,7 +1079,7 @@
     color: #fff;
     position: relative;
     top: 11.18rem;
-    left: -9.8rem;
+    left: -8.8rem;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
