--- a/styles/index.style.scss
+++ b/styles/index.style.scss
@@ -52,7 +52,7 @@
     }
     
     .search-btn{
-      min-width: 10rem;
+      min-width: 8rem;
       height: 1.8rem;
       background: #feffff67;
       display: flex;
@@ -64,9 +64,11 @@
       text-decoration: none;
       padding: 0 1rem;
       border-radius: 1rem;
+      outline: none;
       transition: 300ms linear;
       .btnImg {
         width: 1.5rem;
+        margin-right: 1rem;
       }
     }
 
@@ -639,10 +641,7 @@
     top: 11.19rem;
     left: -11.75rem;
   }
-  .btnImg {
-    width: 1.8rem;
-    margin-right: 0.5rem;
-  }
+  
 }
 
 @media only screen and (max-width: 1366px) {
