--- a/styles/index.style.scss
+++ b/styles/index.style.scss
@@ -1065,7 +1065,7 @@
       left: 10%;
       position: relative;
    
-      border: 1px solid red;
+      // border: 1px solid red;
       display: flex;
       justify-content: center;
       align-items: center;
