--- a/styles/blog-page/blog.style.css
+++ b/styles/blog-page/blog.style.css
@@ -37,7 +37,9 @@ body {
 
 .blog-preview-container {
   width: 100%;
-  height: 500px;
+  max-width: 550px;
+  max-height: 500px;
+  min-height: 500px;
   padding: 1rem;
   background: #fff;
   -webkit-box-shadow: 2px 2px 15px -7px rgba(0, 0, 0, 0.75);
@@ -82,7 +84,7 @@ body {
 }
 
 .img-wrapper-large {
-  width: 100%;
+  min-width: 100%;
   height: 230px;
   overflow: hidden;
 }
@@ -94,10 +96,7 @@ body {
 
 .img-large {
   width: 100%;
-  -o-object-fit: none;
-     object-fit: none;
-  -o-object-position: 100% 200%;
-     object-position: 100% 200%;
+  height: 230px;
 }
 
 .img:hover {
@@ -421,10 +420,7 @@ header .header-p {
 @media only screen and (max-width: 1366px) {
   .img-large {
     width: 100%;
-    -o-object-fit: none;
-       object-fit: none;
-    -o-object-position: 100% 100%;
-       object-position: 100% 100%;
+    height: 130px;
   }
   .img-wrapper-large {
     width: 100%;
@@ -432,7 +428,7 @@ header .header-p {
     overflow: hidden;
   }
   .blog-preview-container {
-    height: 400px;
+    min-height: 400px;
   }
   .blog-preview-container .blog-title-container {
     height: 20%;
@@ -474,8 +470,6 @@ header .header-p {
         grid-template-columns: 1fr;
   }
   .blog-preview-container {
-    width: 100%;
-    height: 100%;
     padding: 1rem;
     background: #fff;
     -webkit-box-shadow: 2px 2px 15px -7px rgba(0, 0, 0, 0.75);
@@ -670,10 +664,6 @@ header .header-p {
   }
   .img-large {
     width: 100%;
-    -o-object-fit: none;
-       object-fit: none;
-    -o-object-position: 50% -800%;
-       object-position: 50% -800%;
   }
 }
 
@@ -690,16 +680,13 @@ header .header-p {
     height: 20%;
   }
   .img-wrapper-large {
-    width: 100%;
+    min-width: 100%;
+    max-width: 350px;
     height: 130px;
     overflow: hidden;
   }
   .img-large {
     width: 100%;
-    -o-object-fit: none;
-       object-fit: none;
-    -o-object-position: 100% 80%;
-       object-position: 100% 80%;
   }
 }
 
