--- a/styles/blog-page/blog.style.scss
+++ b/styles/blog-page/blog.style.scss
@@ -35,7 +35,10 @@ body {
 
 .blog-preview-container {
   width: 100%;
-  height: 500px;
+  max-width: 550px;
+  // height: 500px;
+  max-height: 500px;
+  min-height: 500px;
   // height: 100%;
   padding: 1rem;
   background: #fff;
@@ -81,7 +84,7 @@ body {
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
 .img-wrapper-large {
-  width: 100%;
+  min-width: 100%;
   height: 230px;
   overflow: hidden;
 }
@@ -92,8 +95,9 @@ body {
 
 .img-large {
   width: 100%;
-  object-fit: none;
-  object-position: 100% 200%;
+  height: 230px;
+  // object-fit: none;
+  // object-position: 100% 200%;
 }
 
 .img:hover {
@@ -355,8 +359,9 @@ header {
 @media only screen and (max-width: 1366px) {
   .img-large {
     width: 100%;
-    object-fit: none;
-    object-position: 100% 100%;
+    height: 130px;
+    // object-fit: none;
+    // object-position: 100% 100%;
   }
 
   .img-wrapper-large {
@@ -366,7 +371,7 @@ header {
   }
 
   .blog-preview-container {
-    height: 400px;
+    min-height: 400px;
 
     .blog-title-container {
       height: 20%;
@@ -425,8 +430,8 @@ header {
   }
 
   .blog-preview-container {
-    width: 100%;
-    height: 100%;
+    // width: 100%;
+    // height: 100%;
     // overflow: hidden;
     padding: 1rem;
     background: #fff;
@@ -603,8 +608,8 @@ header {
 
   .img-large {
     width: 100%;
-    object-fit: none;
-    object-position: 50% -800%;
+    // object-fit: none;
+    // object-position: 50% -800%;
   }
 }
 
@@ -625,15 +630,16 @@ header {
   }
 
   .img-wrapper-large {
-    width: 100%;
+    min-width: 100%;
+    max-width: 350px; 
     height: 130px;
     overflow: hidden;
   }
 
   .img-large {
     width: 100%;
-    object-fit: none;
-    object-position: 100% 80%;
+    // object-fit: none;
+    // object-position: 100% 80%;
   }
 }
 
