fix 1.0 blog page

--- a/styles/blog-page/blog.style.scss
+++ b/styles/blog-page/blog.style.scss
@@ -45,7 +45,8 @@ body {
   -moz-box-shadow: $box-shadow;
   -webkit-box-shadow: $box-shadow;
   box-shadow: $box-shadow;
-
+  
+  margin: auto;
   .blog-title-container {
     height: 10%;
   }
