--- a/styles/blog-page/blog.style.css
+++ b/styles/blog-page/blog.style.css
@@ -44,6 +44,7 @@ body {
   background: #fff;
   -webkit-box-shadow: 2px 2px 15px -7px rgba(0, 0, 0, 0.75);
   box-shadow: 2px 2px 15px -7px rgba(0, 0, 0, 0.75);
+  margin: auto;
 }
 
 .blog-preview-container .blog-title-container {
