--- a/blogs/style/pattaya/pattaya.scss
+++ b/blogs/style/pattaya/pattaya.scss
@@ -184,11 +184,14 @@ header {
   }
   .section-1-img-small-wrapper {
     width: 100%;
+    min-width: 840px;
     height: 500px;
+    min-height: 500px;
     overflow: hidden;
   }
   .section-1-img-small {
     height: 100%;
+    
     transition: 200ms linear;
   }
   .section-1-img-small:hover {
@@ -196,7 +199,9 @@ header {
   }
   .section-1-img-wrapper {
     width: 100%;
+    // min-width: 840px;
     height: 350px;
+    min-height: 350px;
     overflow: hidden;
     margin: 3rem 0;
   }
@@ -498,10 +503,14 @@ header {
   .section-1 {
     .section-1-img-wrapper {
       height: 550px;
+      min-height: 550px;
+      max-width: 840px;
+      margin: auto;
     }
 
     .section-1-img {
       height: 100%;
+      min-height: 550px;  
     }
   }
 }
