--- a/blogs/style/thailand/thailand.css
+++ b/blogs/style/thailand/thailand.css
@@ -212,6 +212,7 @@ header .header-p {
 .section-1 .section-1-img-wrapper {
   width: 100%;
   height: 350px;
+  min-height: 350px;
   overflow: hidden;
   margin: 3rem 0;
 }
@@ -577,10 +578,11 @@ header .header-p {
 
 @media only screen and (min-width: 1800px) {
   .section-1 .section-1-img-wrapper {
-    height: 550px;
+    min-height: 550px;
   }
   .section-1 .section-1-img {
     height: 100%;
+    min-height: 550px;
   }
 }
 
