--- a/blogs/style/thailand/thailand.scss
+++ b/blogs/style/thailand/thailand.scss
@@ -166,12 +166,14 @@ header {
   .section-1-img-wrapper {
     width: 100%;
     height: 350px;
+    min-height: 350px;
     overflow: hidden;
     margin: 3rem 0;
   }
 
   .section-1-img {
     width: 100%;
+
     transform: scale(1.1);
     transition: 200ms linear;
   }
@@ -471,11 +473,12 @@ header {
 @media only screen and (min-width: 1800px) {
   .section-1 {
     .section-1-img-wrapper {
-      height: 550px;
+      min-height: 550px;
     }
 
     .section-1-img {
       height: 100%;
+      min-height: 550px;
     }
   }
 }
