--- a/blogs/style/pattaya/pattaya.css
+++ b/blogs/style/pattaya/pattaya.css
@@ -228,10 +228,11 @@ header .header-p {
 
 .section-1 .section-1-img-wrapper {
   width: 100%;
+  max-width: 1000px;
   height: 350px;
   min-height: 350px;
   overflow: hidden;
-  margin: 3rem 0;
+  margin: 3rem auto;
 }
 
 .section-1 .section-1-img {
@@ -468,12 +469,12 @@ header .header-p {
   }
 }
 
-@media only screen and (min-width: 1800px) {
+@media only screen and (max-width: 1800px) {
   .section-1 .section-1-img-wrapper {
-    height: 550px;
-    min-height: 550px;
+    height: 350px;
+    min-height: 350px;
     max-width: 840px;
-    margin: auto;
+    margin: 3rem auto;
   }
   .section-1 .section-1-img {
     height: 100%;
