--- a/styles/blog-page/blog.style.css
+++ b/styles/blog-page/blog.style.css
@@ -499,11 +499,12 @@ header .header-p {
   }
   .img-wrapper-large {
     width: 100%;
-    height: 200px;
+    min-height: 200px;
     overflow: hidden;
   }
   .img-large {
     width: 100%;
+    min-height: 200px;
   }
 }
 
