fixed link bug in footer

--- a/styles/sitemap/sitemap.css
+++ b/styles/sitemap/sitemap.css
@@ -304,6 +304,9 @@ header .header-p {
 }
 
 @media only screen and (max-width: 900px) {
+  .inner {
+    width: 95%;
+  }
   .footer {
     background: #f1f2f8;
     height: auto;
