--- a/styles/sitemap/sitemap.css
+++ b/styles/sitemap/sitemap.css
@@ -307,6 +307,131 @@ header .header-p {
   .inner {
     width: 95%;
   }
+  .phone-menu {
+    width: 100%;
+    height: calc(100vh - 4rem);
+    position: fixed;
+    top: 4rem;
+    display: none;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    background: #02122C;
+    z-index: 99999;
+    -webkit-animation: 300ms menuIn linear forwards;
+            animation: 300ms menuIn linear forwards;
+  }
+  .phone-menu .phone-ul {
+    width: 100%;
+    height: 80%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .phone-menu .phone-ul .phone-li {
+    list-style-type: none;
+    height: 3.5rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 0 3rem;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+  }
+  .phone-menu .phone-a {
+    text-decoration: none;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 1rem;
+    font-weight: 600;
+  }
+  header {
+    width: 100%;
+    height: 30rem;
+    text-align: center;
+    padding: 0 1rem;
+  }
+  header .phone-nav {
+    width: 100%;
+    height: 4rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    position: fixed;
+    background: #02122C;
+    padding: 0 1rem;
+    top: 0;
+    z-index: 10;
+  }
+  header .phone-nav .logo-phone {
+    width: 8rem;
+  }
+  header .phone-nav .burger-menu {
+    width: 1.5rem;
+  }
+  header .phone-nav .close {
+    color: white;
+    font-size: 2rem;
+    font-weight: 1000;
+    display: none;
+  }
+  header .site-nav {
+    display: none;
+  }
+  header .site-nav-inner {
+    width: 50%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  header .site-nav-inner .logo {
+    width: 10rem;
+  }
+  header .site-ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  header .site-li {
+    list-style-type: none;
+    margin-left: 3rem;
+  }
+  header .site-a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: 700;
+  }
+  header .header-h1 {
+    font-size: 2rem;
+    color: #fff;
+    text-shadow: 0px 0px 15px #000000;
+  }
+  header .header-p {
+    color: #fff;
+    text-shadow: 0px 0px 15px #000000;
+  }
   .footer {
     background: #f1f2f8;
     height: auto;
