--- a/styles/sitemap/sitemap.scss
+++ b/styles/sitemap/sitemap.scss
@@ -266,6 +266,116 @@ header {
     width: 95%;
   }
   
+  .phone-menu {
+    width: 100%;
+    height: calc(100vh - 4rem);
+    position: fixed;
+    top: 4rem;
+    display: none;
+    justify-content: center;
+    align-items: flex-start;
+    background: $fourth-color;
+    z-index: 99999;
+
+    animation: 300ms menuIn linear forwards;
+
+    .phone-ul {
+      width: 100%;
+      height: 80%;
+      display: flex;
+      flex-direction: column;
+      // justify-content: space-evenly;
+
+      .phone-li {
+        list-style-type: none;
+        height: 3.5rem;
+        display: flex;
+        align-items: center;
+        padding: 0 3rem;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+        border-top: 1px solid rgba(255, 255, 255, 0.5);
+      }
+    }
+    .phone-a {
+      text-decoration: none;
+      color: #fff;
+      text-transform: uppercase;
+      font-size: 1rem;
+      font-weight: 600;
+    }
+  }
+
+  header {
+    width: 100%;
+    height: 30rem;
+    text-align: center;
+    padding: 0 1rem;
+
+    .phone-nav {
+      width: 100%;
+      height: 4rem;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      position: fixed;
+      background: $fourth-color;
+      padding: 0 1rem;
+      top: 0;
+      z-index: 10;
+
+      .logo-phone {
+        width: 8rem;
+      }
+      .burger-menu {
+        width: 1.5rem;
+      }
+      .close {
+        color: white;
+        font-size: 2rem;
+        font-weight: 1000;
+        display: none;
+      }
+    }
+    .site-nav {
+      display: none;
+    }
+
+    .site-nav-inner {
+      width: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      .logo {
+        width: 10rem;
+      }
+    }
+    .site-ul {
+      display: flex;
+    }
+
+    .site-li {
+      list-style-type: none;
+      margin-left: 3rem;
+    }
+    .site-a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 700;
+    }
+
+    .header-h1 {
+      font-size: 2rem;
+      color: #fff;
+      text-shadow: 0px 0px 15px #000000;
+    }
+
+    .header-p {
+      color: #fff;
+      text-shadow: 0px 0px 15px #000000;
+    }
+  }
+  
   .footer {
     background: #f1f2f8;
     height: auto;
