--- a/blogs/style/phuket/phuket.scss
+++ b/blogs/style/phuket/phuket.scss
@@ -27,10 +27,17 @@
   text-align: justify;
 }
 
+.ul{
+  display: flex;
+  flex-direction: column;
+  margin: 2rem 0;
+  list-style-position: inside;
+}
 //TEXT STYLES -----------------------------------------------
 .span-italize {
   font-style: italic;
 }
+
 
 .text-link {
   text-decoration: none;
@@ -41,6 +48,17 @@
   color: $main-color;
   font-size: 1.2rem;
   margin-top: 1rem;
+}
+
+.p {
+  text-align: justify;
+  margin: 1rem 0;
+  text-indent: 2rem;
+}
+
+.h3{
+  margin: 2rem 0;
+  font-size: 1rem;
 }
 
 //Column-container ------------------------------------------
@@ -66,8 +84,27 @@
   display: none;
 }
 
+// SPACER
+.vertical-spacer-1rem{
+  margin: 1rem 0;
+}
 // ------------------------------------------------------------------------------------------
 
+// TABLE
+
+table{
+  border-collapse: collapse;
+  table-layout: fixed ;
+  width: 100%;
+}
+tr,
+td,
+th{
+  border: 1px solid black;
+  width: 1fr;
+}
+
+// -----------------------------------------------------------------
 header {
   width: 100%;
   height: 80vh;
@@ -185,7 +222,7 @@ header {
   .section-1-img:hover {
     transform: scale(1);
   }
-  .section-1-h2 {
+  .h2 {
     font-size: 1.2rem;
     margin: 2rem 0;
   }
@@ -641,7 +678,7 @@ header {
       font-size: 1.7rem;
     }
 
-    .section-1-p {
+    .p {
       text-align: justify;
     }
     .section-1-img-small-wrapper {
