--- a/blogs/style/phuket/phuket.scss
+++ b/blogs/style/phuket/phuket.scss
@@ -102,6 +102,7 @@ td,
 th{
   border: 1px solid black;
   width: 1fr;
+  text-align: center;
 }
 
 // -----------------------------------------------------------------
