--- a/blogs/style/pattaya/pattaya.scss
+++ b/blogs/style/pattaya/pattaya.scss
@@ -46,6 +46,11 @@ th {
 .p {
   text-align: justify;
   margin: 1rem 0;
+  text-indent: 2rem;
+}
+.p-normal{
+  text-align: justify;
+  margin: 1rem 0;
 }
 .h3{
   font-size: 1rem;
@@ -92,6 +97,24 @@ th {
 .phone-menu {
   display: none;
 }
+
+
+// TABLE
+
+table{
+  border-collapse: collapse;
+  table-layout: fixed ;
+  width: 100%;
+}
+tr,
+td,
+th{
+  border: 1px solid black;
+  width: 1fr;
+  text-align: center;
+}
+
+// -----------------------------------------------------------------
 
 // ------------------------------------------------------------------------------------------
 
@@ -218,7 +241,8 @@ header {
   .section-1-img:hover {
     transform: scale(1);
   }
-  .section-1-h2 {
+  .section-1-h2, 
+  .h2 {
     font-size: 1.2rem;
     margin: 2rem 0;
   }
