--- a/blogs/style/pattaya/pattaya.css
+++ b/blogs/style/pattaya/pattaya.css
@@ -711,12 +711,12 @@ header .header-p {
   }
   .section-1 .section-1-img-small-wrapper {
     width: 100%;
-    height: 300px;
     overflow: hidden;
   }
   .section-1 .section-1-img-wrapper {
     height: 250px;
-    margin: 3rem 0;
+    min-height: 250px;
+    margin: 1rem 0;
   }
   .section-1 .section-1-img {
     height: 250px;
