--- a/blogs/style/pattaya/pattaya.scss
+++ b/blogs/style/pattaya/pattaya.scss
@@ -722,13 +722,14 @@ header {
     }
     .section-1-img-small-wrapper {
       width: 100%;
-      height: 300px;
+      // height: 300px;
       overflow: hidden;
     }
 
     .section-1-img-wrapper {
       height: 250px;
-      margin: 3rem 0;
+      min-height: 250px;
+      margin: 1rem 0;
     }
 
     .section-1-img {
