--- a/styles/index.style.css
+++ b/styles/index.style.css
@@ -513,6 +513,7 @@
 
 .section-5 .section-5-h2 {
   margin-bottom: 1rem;
+  text-align: center;
 }
 
 .section-5 .section-5-p {
@@ -527,7 +528,8 @@
 
 .section-6 .section-6-h2 {
   font-size: 1.3rem;
-  margin-bottom: 5rem;
+  text-align: center;
+  margin-bottom: 2rem;
 }
 
 .section-6 .section-6-h3 {
@@ -569,13 +571,13 @@
 }
 
 .section-7 {
-  margin: 6rem 0;
+  margin: 3rem 0;
 }
 
 .section-7 .section-7-h2 {
-  text-align: justify;
+  text-align: center;
   font-size: 1.5rem;
-  margin: 4rem 0;
+  margin: 2rem 0;
 }
 
 .section-7 .section-7-p {
