--- a/styles/index.style.scss
+++ b/styles/index.style.scss
@@ -404,6 +404,7 @@
   }
   .section-5-h2 {
     margin-bottom: 1rem;
+    text-align: center;
     // word-wrap: break-word;
   }
   .section-5-p {
@@ -419,7 +420,8 @@
 
   .section-6-h2 {
     font-size: 1.3rem;
-    margin-bottom: 5rem;
+    text-align: center;
+    margin-bottom: 2rem;
     
   }
   .section-6-h3{
@@ -457,12 +459,12 @@
 }
 
 .section-7 {
-  margin: 6rem 0;
+  margin: 3rem 0;
 
   .section-7-h2 {
-    text-align: justify;
+    text-align: center;
     font-size: 1.5rem;
-    margin: 4rem 0;
+    margin: 2rem 0;
   }
 
   .section-7-p {
