--- a/styles/tours-page/tours-page.module.css
+++ b/styles/tours-page/tours-page.module.css
@@ -325,7 +325,8 @@
 
 .section-6 .section-6-h2 {
   font-size: 1.3rem;
-  margin-bottom: 5rem;
+  margin-bottom: 2rem;
+  text-align: center;
 }
 
 .section-6 .section-6-h3 {
